--- a/Index.html
+++ b/Index.html
@@ -23,5 +23,11 @@
         </div>
     </header>
     
+    <main>
+        <section id="banner">
+            <img src="" alt=""> 
+
+        </section>
+    </main>
 </body>
 </html>
